# wellwon-app-es

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE_TASKS.md  DESIGN_SYSTEM.md  cleanup_old_python.sh  granian.toml  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  server.py
app/chat/: __init__.py  aggregate.py  commands.py  enums.py  events.py  exceptions.py  projectors.py  queries.py  read_models.py  value_objects.py
app/company/: __init__.py  aggregate.py  commands.py  enums.py  events.py  exceptions.py  projectors.py  queries.py  read_models.py
app/config/: cache_config.py  dadata_config.py  dlq_config.py  event_store_config.py  eventbus_config.py  eventbus_transport_config.py  jwt_config.py  kontur_config.py  logging_config.py  oauth_config.py  outbox_config.py  pg_client_config.py  projection_rebuilder_config.py  redis_config.py  reliability_config.py  saga_config.py  scylla_config.py  snapshot_config.py  storage_config.py  telegram_config.py  worker_config.py  wse_config.py
app/core/: __init__.py  app_state.py  background_tasks.py  exceptions.py  fastapi_types.py  health.py  lifespan.py  middleware.py  routes.py  shutdown.py
app/customs/: enums.py  exceptions.py  projectors.py  queries.py  read_models.py  value_objects.py
app/declarant/: __init__.py  form_definitions_service.py  form_routes.py  form_templates_routes.py  form_templates_service.py  json_templates_service.py  kontur_client.py  references_service.py  routes.py  schema_transform_service.py
app/security/: encryption.py  jwt_auth.py  security_utils.py  telegram_security.py
app/user_account/: aggregate.py  commands.py  enums.py  events.py  exceptions.py  handlers.py  handlers_legacy.py  projectors.py  queries.py  read_models.py  sync_events.py
app/utils/: datetime_utils.py  uuid_utils.py
app/workers/: data_sync_worker.py  event_processor_worker.py
app/wse/: __init__.py  dependencies.py
database/: wellwon.sql
database/migrations/: 002_dynamic_forms.sql  003_form_builder_fields_config.sql  003_form_templates.sql  004_form_definition_versions.sql
database/pg/: wellwon.sql  wellwon_reference.sql
database/scylla/: README.md  wellwon_scylla.cql
docs/: ARCHITECTURE_SCHEMA_FROM_TRADECORE.md  BUYERS.md  CHAT_MESSAGE_PERSISTENCE_BEST_PRACTICES.md  CUSTOMS_DOMAIN_ARCHITECTURE_ANALYSIS.md  DATABASE_DISTRIBUTION_ANALYSIS.md  DESIGN_SYSTEM.md  DOMAIN_CREATION_TEMPLATE.md  DOMAIN_IMPLEMENTATION_BEST_PRACTICES.md  ERP_PLAN.md  EVENTSTORE_STREAM_ARCHIVAL_PATTERN.md  EXTERNAL_CHANGE_DETECTION_INTEGRATION_GUIDE.md  PYTHON_CLEANUP_REPORT.md  PYTHON_INTERPRETER_SETUP.md  SCYLLADB_IMPLEMENTATION_QUALITY_REPORT.md  SCYLLADB_INFRASTRUCTURE_REPORT.md  SESSION_REPORT_2025-11-18.md  SUPABASE_MIGRATION_PLAN.md  SYNC_ASYNC_PROJECTION_BEST_PRACTICES.md  SYNC_PROJECTION_MIGRATION_COMPLETE.md  SYNC_PROJECTION_MIGRATION_GUIDE.md  TELEGRAM_ADAPTER_RESEARCH.md  WELLWON_ARCHITECTURE_STRUCTURE.md  Закупки.md
docs/CES/: CES_APP_CONTEXT_BYPASS.md  CES_COMPLETE_REFERENCE.md  CES_INTEGRATION_GUIDE.md  CES_USER_ACCOUNT_PATTERN.md
docs/reference/: 00_ARCHITECTURE_OVERVIEW.md  01_DOMAIN_CREATION_GUIDE.md  02_TRUE_SAGA_GUIDE.md  03_API_ROUTER_GUIDE.md  04_SERVICE_CREATION_GUIDE.md  AGGREGATE_PATTERNS.md  COMMAND_HANDLER_GUIDE.md  COMMON_PITFALLS.md  DATABASE_PATTERNS.md  DEBUGGING_EVENT_FLOW.md  EVENT_DESIGN_PATTERNS.md  INDEX.md  README.md  (+11 more)
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
reference/: 01_DOMAIN_CREATION_GUIDE.md  ARCHITECTURE_REFERENCE.md  CACHE_STRATEGY_GUIDE.md  CIRCUIT_BREAKER_GUIDE.md  COMPENSATION_GUIDE.md  CONFIG_ARCHITECTURE_GUIDE.md  DATABASE_PATTERNS.md  EVENT_BUS_GUIDE.md  PROJECTOR_GUIDE.md  QUERY_HANDLER_GUIDE.md  REACTIVE_INTERFACE_REFERENCE.md  VALUE_OBJECTS_GUIDE.md  teleton.py  tradecore_for_reference.sql
scripts/: generate_session_string.py  init_minio.py  rotate_keys.py  start_all.sh  start_server.sh  stop_all.sh  sync_version.py
(+905 files in other folders)
